Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sun Apr 28 21:54:19 BST 2002	Riley Williams <Riley@Williams.Name>

	* Removed redundant kill_proc function, as it is implemented
	  under the name kill_process instead.
	* Verified that all kernel/*.c files other than kernel/printk.c
	  are clean as far as `splint -weak` is concerned.
	* Detected a bug in init/main.c where sys_open is called with
	  only two parameters when three are expected. Inserted FIXME
	  comment summarising the problem as I can't currently fix it.
	* Fixed one bug in serial console - it tried to open /dev/ttys0
	  when the actual device is /dev/ttyS0 instead.
	* Verified that all arch/i86/kernel/*.[ch] files are clean as
	  far as `sprint -weak` is concerned.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Sun Apr 28 14:49:59 BST 2002	Riley Williams <Riley@Williams.Name>

	* Rephrased comments in arch/i86/kernel/process.c to avoid
	  compiler bug.
	* Corrected definition of loff_t type from __u32 to __s32 as
	  it is regularly used with negative values.
	* Fixed bug in Harry's swap code that prevented the kernel from
	  compiling if swap was disabled.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Sun Apr 28 12:30:32 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that all include/{arch,linuxmt}/*.h files are clean
	  as far as `splint -weak` is concerned.
	* Changed prototypes for functions in arch/i86/mm/user.c such
	  that all size fields use size_t parameters rather than the
	  unholy mix of {signed,unsigned} {short,long} integers that
	  were previously used.
