@@ -32,6 +32,12 @@ Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
 
+Sun Apr 28 22:55:56 BST 2002	Riley Williams <Riley@Williams.Name>
+
+	* Enabled init_timer() and add_timer() routines. For some reason,
+	  they were #if 0'd out of the source code, but references still
+	  existed in routines that were not so treated.
+
 Sun Apr 28 21:54:19 BST 2002	Riley Williams <Riley@Williams.Name>
 
 	* Removed redundant kill_proc function, as it is implemented
